# mecha-edge-grpc

./: Cargo.toml  build.rs
mecha-device-sdk/: Cargo.toml
mecha-device-sdk/src/: lib.rs
proto/: battery.proto  display.proto  gyro.proto  wifi.proto
src/: battery.rs  battery_module.rs  battery_servcie.rs  display.rs  display_module.rs  display_service.rs  gyro_service.rs  main.rs  wifi.rs  wifi_module.rs  wifi_service.rs
