[package]
name = "mecha-edge-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
# wifi-ctrl = "0.2.3"
log = "0.4.20"
wifi-module = {  git = "https://github.com/Dhruvesh08/mecha-edge-sdk/", branch = "sdk-restructure" }
display-module = {  git = "https://github.com/Dhruvesh08/mecha-edge-sdk/", branch = "sdk-restructure" }


[build-dependencies]
tonic-build = "0.9.2"
